# nio-smith

./: .gitignore  .readthedocs.yaml  BREAKING.md  PLUGINS.md  README.md  SETUP.md  bot_commands.py  callbacks.py  chat_functions.py  config.py  main.py  message_responses.py  plugin.py  plugincommand.py  pluginhook.py  pluginloader.py  pyproject.toml  requirements.txt  sample.config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
core/: bot_commands.py  callbacks.py  chat_functions.py  config.py  message_responses.py  plugin.py  pluginloader.py  storage.py  timer.py
docs/: BREAKING.md  PLUGINS.md  SETUP.md  STRUCTURE.md  requirements.txt
plugins/: README.md  __init__.py  echo.py  help.py  meter.py  oracle.py  pick.py  quote.py  roll.py  sampleplugin.py  send_typing.py  sonarr.py  spruch.py  translate.py
plugins/cash-up/: cash-up-test-template.js  cash-up.py  test_groups.py
plugins/cashup/: README.md  cashup.py  cashup.sample.yaml
plugins/coingecko/: README.md  coingecko.py  coingecko.sample.yaml  requirements.txt
plugins/dates/: README.md  dates.py  requirements.txt
plugins/echo/: README.md  echo.py
plugins/federation_status/: README.md  federation_status.py  federation_status.sample.yaml  requirements.txt
plugins/help/: README.md  help.py
plugins/manage_bot/: README.md  manage_bot.py  manage_bot.sample.yaml
plugins/meter/: README.md  meter.py  meter.sample.yaml
plugins/oracle/: README.md  oracle.py
plugins/pick/: README.md  pick.py
plugins/quote/: README.md  quote.py  quote.sample.yaml
plugins/roll/: README.md  roll.py
plugins/sample/: README.md  sample.py  sample.sample.yaml
plugins/sonarr/: README.md  requirements.txt  sonarr.py  sonarr.sample.yaml
plugins/songlinks/: README.md  requirements.txt  songlinks.py  songlinks.sample.yaml
plugins/songwhip/: LICENSE  README.md  requirements.txt  songwhip.py  songwhip.sample.yaml
plugins/spruch/: README.md  spruch.py  spruchdb.txt
plugins/translate/: README.md  requirements.txt  translate.py  translate.sample.yaml
plugins/wiki/: README.md  requirements.txt  wiki.py  wiki.sample.yaml
plugins/wissen/: README.md  wissen.py  wissen.sample.yaml  wissen.txt
plugins/xkcd_comic/: README.md  requirements.txt  xkcd_comic.py  xkcd_comic.sample.yaml
plugins/youtube/: README.md  requirements.txt  youtube.py  youtube.sample.yaml
