[tool.black]
line-length = 160

[tool.poetry]
name = "nio-smith"
version = "0.0.8"
description = "A plugin-based bot for @matrix-org"
authors = ["alturiak"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
matrix-nio = { version = ">=0.20.2", extras = ["e2e"] }
fuzzywuzzy = ">=0.18.0"
PyYAML = ">=6.0"
jsonpickle = ">=2.1.0"
Pillow = ">=9.0.1"
blurhash-python = ">=1.1.3"
requests = ">=2.27.1"
xkcd = "^2.4.2"
commonmark = "^0.9.1"
recommonmark = "^0.7.1"
dateparser = "^1.1.1"
humanize = "^4.0.0"
pytz = "^2022.1"
freetranslate = "^0.2.2"
wikipedia = "^1.4.0"
uvloop = {version = "^0.16.0", markers = 'platform_system != "Windows"'}
python-Levenshtein = "^0.12.2"
pycoingecko = "^2.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
