[tool.black]
line-length = 160

[tool.poetry]
name = "nio-smith"
version = "0.0.8"
description = "A plugin-based bot for @matrix-org"
authors = ["alturiak"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~=3.8,<4.0.0"
matrix-nio = { version = "~=0.24.0", extras = ["e2e"] }
fuzzywuzzy = "~=0.18.0"
PyYAML = "~=6.0.1"
jsonpickle = "~=3.0.2"
Pillow = "~=10.2.0"
blurhash-python = "~=1.2.2"
requests = "~=2.31.0"
xkcd = "~=2.4.2"
commonmark = "~=0.9.1"
recommonmark = "~=0.7.1"
dateparser = "~=1.2.0"
humanize = "~=4.9.0"
pytz = "~=2024.1"
freetranslate = "~=0.2.2"
wikipedia = "~=1.4.0"
uvloop = { version = "~=0.17.0", markers = 'platform_system != "Windows"' }
python-Levenshtein = "~=0.25.0"
pycoingecko = "~=3.1.0"

[tool.poetry.dev-dependencies]
black = { version = "~=23.3.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core~=1.0.0"]
build-backend = "poetry.core.masonry.api"
